pipeline build fix